--- a/index.html
+++ b/index.html
@@ -1,425 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Animate CSS Link
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> -->
-    <!-- External CSS File Link -->
-     <link rel="stylesheet" href="style.css">
-    <!-- Bootstrap CSS Link -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Font Awesome Link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Favicon -->
-     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
-    <title>Home SEO Agency - The SEO</title>
+    <title>Document</title>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+        integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
 
-    <!-- Header Start -->
-     <section class="main-header-cont container position-absolute top-0 end-0 start-0 px-5 z-2">
-        <!-- First Header -->
-         <div class="top-header d-flex justify-content-between py-3">
-            <div class="social-media d-flex gap-3">
-                <i class="fa-brands fa-facebook-f"></i>
-                <i class="fa-brands fa-x-twitter"></i>
-                <i class="fa-brands fa-linkedin-in"></i>
-                <i class="fa-brands fa-google-plus-g"></i>
-            </div>
-            <div class="contact d-flex gap-4">
-                <div class="icon-cont d-flex gap-2 text-white">
-                  <div class="icon">
-                    <i class="fa-solid fa-envelope"></i>
-                  </div>
-                  <div class="txt">
-                    <p>faizantechm@gmail.com</p>
-                  </div>
-                </div>
-                <div class="icon-cont d-flex gap-2 text-white">
-                  <div class="icon">
-                    <i class="fa-solid fa-phone"></i>
-                  </div>
-                  <div class="txt">
-                    <p>+92 123 45678912</p>
-                  </div>
-                </div>
-            </div>
-         </div>
-        <!-- Second Header -->
-        <nav class="navbar navbar-expand-lg bg-transparent">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                <img src="./images/logo1.png" alt="">
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon">
-                  <i class="fa fa-bars text-white"></i>
-                </span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link text-white" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="#">About Us</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Services</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Contact Us</a>
-                  </li>
-                </ul>
-                <div class="cart ms-4">
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  <i class="fa-solid fa-cart-shopping"></i>
-                </div>
-              </div>
-            </div>
-          </nav>
-     </section>
-    <!-- Header End -->
-
-    <!-- Body Start -->
-     <section class="main">
-
-      <div class="hero-section d-flex flex-column align-items-center justify-content-center">
-        <img src="./images/hero-heading-img.png" alt="">
-        <h1>Increase Sales On Your Website</h1>
-        <h3>SEO / SEM / PPC / Content Marketing</h3>
-        <div class="btn-cont d-flex justify-content-between">
-          <button>Our Works</button>
-          <button>Contact Us</button>
-        </div>
-      </div>
-
-      <div class="analytics d-flex justify-content-center mx-auto">
-        <div class="box flex-column justify-content-start text-center">
-            <i class="fa-solid fa-user-tie"></i>
-            <h1>378</h1>
-            <h5>Happy Clients</h5>
-            <hr />
-            <p>We worked many-many time and got perfect result!</p>
-        </div> 
-        <div class="box flex-column justify-content-start text-center">
-          <i class="fa-solid fa-bullhorn"></i>
-          <h1>16 Years</h1>
-          <h5>In Business</h5>
-          <hr />
-          <p>Work with us and get leadership!</p>
-        </div>
-        <div class="box flex-column justify-content-start text-center">
-          <i class="fa-solid fa-clipboard-list"></i>
-          <h1>567</h1>
-          <h5>Projects Finished</h5>
-          <hr />
-          <p>We worked many-many time and got perfect result! Work with us and getting leadership!</p>
-        </div>
-      </div>
-
-      <div class="services-section text-center container px-5">
-        <h1>Our Services</h1>
-        <div class="line"></div>
-        <p>What You Get Using Our SEO Company’s Help?</p>
-        <div class="services-cont row">
-          <div class="img-container col-5">
-            <img src="./images/iphone.jpg" alt="">
-          </div>
-          <div class="services row col-7">
-            <div class="service col-lg-6">
-              <div class="icon">
-                <i class="fa-solid fa-dollar-sign"></i>
-              </div>
-              <div class="content">
-                <h4>Pay Per Click</h4>
-                <p>Pay just for result! We can give clients for your business tomorrow!</p>
-                <a href="#">Read More <i class="fa-solid fa-angles-right"></i></a>
-              </div>
-            </div>
-            <div class="service col-lg-6">
-              <div class="icon">
-                <i class="fa-brands fa-facebook"></i>
-              </div>
-              <div class="content">
-                <h4>Social Media</h4>
-                <p>Online reputation management and advertising campaings in social media</p>
-                <a href="#">Read More <i class="fa-solid fa-angles-right"></i></a>
-              </div>
-            </div>
-            <div class="service col-lg-6">
-              <div class="icon">
-                <i class="fa-solid fa-magnifying-glass-chart"></i>
-              </div>
-              <div class="content">
-                <h4>Pay Per Click</h4>
-                <p>One page optimization and link building strategy</p>
-                <a href="#">Read More <i class="fa-solid fa-angles-right"></i></a>
-              </div>
-            </div>
-            <div class="service col-lg-6">
-              <div class="icon">
-                <i class="fa-solid fa-magnifying-glass-dollar"></i>
-              </div>
-              <div class="content">
-                <h4>Search Engine Marketing</h4>
-                <p>Complex strategy with link building, content marketing</p>
-                <a href="#">Read More <i class="fa-solid fa-angles-right"></i></a>
-              </div>
-            </div>
-            <div class="service col-lg-6">
-              <div class="icon">
-                <i class="fa-solid fa-comments-dollar"></i>
-              </div>
-              <div class="content">
-                <h4>Content Marketing</h4>
-                <p>Strategy for growing loyalty of your clients and helping you gain a top ranking position on search engines</p>
-                <a href="#">Read More <i class="fa-solid fa-angles-right"></i></a>
-              </div>
-            </div>
-            <div class="service col-lg-6">
-              <div class="icon">
-                <i class="fa-solid fa-map-location-dot"></i>
-              </div>
-              <div class="content">
-                <h4>Local Search</h4>
-                <p>Directory submission, online reputation management and optimization services for your region</p>
-                <a href="#">Read More <i class="fa-solid fa-angles-right"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="proposal">
-        <div class="content">
-          <h1>Free SEO audit, report of your website</h1>
-          <div class="line"></div>
-          <p>Your website will be scanned and checked for On page, off page, domain authority, social engagement and other SEO factors. Not only that but we will also do competition analysis. Receive 5 point evaluation covering 60 major aspects</p>
-          <div class="btn-cont d-flex justify-content-between">
-            <button>Send Request Now!</button>
-            <button>Watch Portfolio!</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="projects-cont text-center mx-auto">
-        <h1>Our Projects</h1>
-        <div class="line"></div>
-        <p>Best & popular of our works</p>
-        <div class="categories-link d-flex justify-content-center gap-5">
-          <a href="#">All</a>
-          <a href="#">PPC</a>
-          <a href="#">SEM</a>
-          <a href="#">SEO</a>
-          <a href="#">SMO</a>
-          <a href="#">Webdesign</a>
-        </div>
-        <div class="projects row container mx-auto px-5">
-          <div class="project col-lg-4">
-            <img src="./images/p-1.jpg" alt="">
-          </div>
-          <div class="project col-lg-4">
-            <img src="./images/finess1.jpg" alt="">
-          </div>
-          <div class="project col-lg-4">
-            <img src="./images/d2.jpg" alt="">
-          </div>
-          <div class="project col-lg-4">
-            <img src="./images/lawyer2.jpg" alt="">
-          </div>
-          <div class="project col-lg-4">
-            <img src="./images/p-1.jpg" alt="">
-          </div>
-          <div class="project col-lg-4">
-            <img src="./images/d4.jpg" alt="">
-          </div>
-        </div>
-      </div>
-
-      <div class="whyus-section">
-        <div class="main-box">
-          <div class="content text-center">
-            <h1>Why US!</h1>
-            <div class="line"></div>
-            <p>We offer synergistic online products, social media marketing and dynamic SEO strategies deliverin.</p>
-          </div>
-        </div>
-        <div class="box-1">
-          <div class="content text-center">
-            <img src="./images/global.png" alt="">
-            <p>Global Reach</p>
-          </div>
-        </div>
-        <div class="box-2">
-          <div class="content text-center">
-            <img src="./images/pricing.png" alt="">
-            <p>Best Prices</p>
-          </div>
-        </div>
-        <div class="box-3">
-          <div class="content text-center">
-            <img src="./images/briefcase.png" alt="">
-            <p>Big Experience</p>
-          </div>
-        </div>
-        <div class="box-4">
-          <div class="content text-center">
-            <img src="./images/convenience.png" alt="">
-            <p>Convenience</p>
-          </div>
-        </div>
-        <div class="box-5">
-          <div class="content text-center">
-            <img src="./images/member.png" alt="">
-            <p>Team Strength</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="team-section">
-        <h1>Our Projects</h1>
-        <div class="line"></div>
-        <p>Our team values more than big budgets. We do our best to meet our customers expectations, always in time.</p>
-        <div class="team-cont">
-          <div class="team-card">
-            <div class="img-cont">
-              <!-- <img src="./images/member5.jpg" alt=""> -->
-            </div>
-            <div class="content-container">
-              <h4>Gavin White</h4>
-              <h6>Account Manager</h6>
-              <hr />
-              <p>Gavin has serious attitude when it comes to creating and delivering outstanding digital experience</p>
-              <div class="social">
-                <i class="fa-brands fa-behance"></i>
-                <i class="fa-brands fa-facebook-f"></i>
-                <i class="fa-brands fa-youtube"></i>
-                <i class="fa-brands fa-x-twitter"></i>
-                <i class="fa-brands fa-linkedin-in"></i>
-              </div>
-            </div>
-          </div>
-          <div class="team-card">
-            <div class="img-cont">
-              <!-- <img src="./images/member5.jpg" alt=""> -->
-            </div>
-            <div class="content-container">
-              <h4>Allison Smith</h4>
-              <h6>Internet Marketer</h6>
-              <hr />
-              <p>Alisson has serious attitude when it comes to creating and delivering outstanding digital experience</p>
-              <div class="social">
-                <i class="fa-brands fa-behance"></i>
-                <i class="fa-brands fa-facebook-f"></i>
-                <i class="fa-brands fa-youtube"></i>
-                <i class="fa-brands fa-x-twitter"></i>
-                <i class="fa-brands fa-linkedin-in"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="proposal-2">
-        <img src="./images/cta2.jpg" alt="">
-        <div class="content">
-          <h1>READY TO GET STARTED?</h1>
-          <p>Contact us to start evaluating your digital marketing plan!</p>
-          <button>Contact Us Now!</button>
-        </div>
-      </div>
-
-      <div class="testimonial">
-        <h1>Testimonials</h1>
-        <div class="line"></div>
-        <p>Good words. Good people</p>
-        <div id="carouselExampleSlidesOnly" class="carousel slide t-slider" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="./images/t-1.PNG" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="./images/t-2.PNG" class="d-block w-100" alt="...">
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="clients">
-        <div class="box">
-          <img src="./images/client1.png" alt="">
-        </div>
-        <div class="box">
-          <img src="./images/client2.png" alt="">
-        </div>
-        <div class="box">
-          <img src="./images/client3.png" alt="">
-        </div>
-        <div class="box">
-          <img src="./images/client4.png" alt="">
-        </div>
-      </div>
-
-      <div class="proposal-3">
-        <div class="content">
-          <h1>Not enough for your seo needs?</h1>
-          <p>Have you specific requirements? Just send us details!</p>
-        </div>
-        <div class="btn-cont">
-          <button>Contact Us Now!</button>
-        </div>
-      </div>
-
-     </section>
-
-    <!-- Body End -->
-
-    <!-- Footer start -->
-     <footer>
-      <div class="content-cont">
-        <div class="left">
-          <h1>Contact Us</h1>
-          <h2>+1 29 895 25 25</h2>
-          <div class="icon-box">
-            <div class="icon">
-              <i class="fa-solid fa-location-dot"></i>
-            </div>
-            <div class="txt">
-              <p>              3775 Vermont Ave, Los Angeles, CA 90007</p>
-            </div>
-          </div>
-          <div class="icon-box">
-            <div class="icon">
-              <i class="fa-solid fa-envelope"></i>
-            </div>
-            <div class="txt">
-              <p>seoagency@example.com</p>
-            </div>
-          </div>
-          <button>Request A Free Quote!</button>
-        </div>
-        <div class="right">
-          <i class="fa-brands fa-facebook-f"></i>
-          <i class="fa-brands fa-x-twitter"></i>
-          <i class="fa-brands fa-linkedin-in"></i>
-          <i class="fa-brands fa-google-plus-g"></i>
-        </div>
-      </div>
-      <div class="copyright">
-        <label for="">
-          <i class="fa fa-envelope"></i>
-          <input type="text">
-          <button>Subscribe</button>
-        </label>
-        <p>© 2015-2018 All Rights Reserved. Seo Agency Wordpress Theme</p>
-      </div>
-     </footer>
-    <!-- Footer end -->
-    
 </body>
-<!-- Bootstrap Js Link -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
+
 </html>
