--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,120 @@
 </head>
 
 <body>
-
+    <!-- header start -->
+    <!-- navbar start -->
+    <section class="navheadsection">
+        <div class="navhead">
+            <nav class="navbar navbar-expand-md navheadnav">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img src="./BSEKimages/logo3.png" alt="" width="180px"
+                            height="30px" /></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#"><button class="homebtn">Home</button></a>
+                            </li>
+                            <li class="nav-item ms-1">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
+                            <li class="nav-item ms-1">
+                                <a class="nav-link" href="#">Forms</a>
+                            </li>
+                            <li class="nav-item ms-1">
+                                <a class="nav-link" href="#">Other</a>
+                            </li>
+                            <li class="nav-item ms-1">
+                                <a class="nav-link" href="#">Admission Procedure</a>
+                            </li>
+                            <li class="nav-item ms-1">
+                                <a class="nav-link" href="#"><button class="resultbtn"> RESULTS</button></a>
+                            </li>
+                            <li class="nav-item mx-1">
+                                <a class="nav-link" href="#"><img src="./BSEKimages/sindhGovernment.png" alt=""
+                                        width="20px" height="23px" /> Universities & Boards</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </section>
+    <!-- navbar end -->
+    <!-- header end -->
+    <!-- hero section start -->
+    <!-- section 1 start -->
+    <section>
+        <div class="container imagecontainer">
+            <img class="image" src="./BSEKimages/homeimg.jpg" alt="">
+            <div class="imgtxt container">
+                <div class="txt container">
+                    <h1>Welcome to Board Of Secondary Education Karachi</h1>
+                    <p>BSEK was established in 1950. The major ambition of this board is to promote school education
+                        and work for the betterment of education while maintaining high standards in Karachi.</p>
+                    <i class="fa-brands fa-facebook mx-1"></i>
+                    <i class="fa-brands fa-instagram ms-1"></i>
+                    <i class="fa-brands fa-youtube ms-1"></i>
+                    <i class="fa-brands fa-whatsapp mx-1"></i>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- section 1 end -->
+    <!-- section 2 start -->
+    <section class="cards1 container">
+        <div class="row m-0 cardd1">
+            <div class="col-lg-4 col-md-4 col-sm-12 card1">
+                <div class="card11">
+                    <span>
+                        <i class="fa-solid fa-school"></i>
+                    </span><span>
+                        <h4>Registeration / Details for Online Portal</h4>
+                    </span><span>
+                        <p>Register your school with our registeration form.</p>
+                    </span>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12 card2">
+                <div class="card22">
+                    <span>
+                        <i class="fa-solid fa-file-lines"></i>
+                    </span>
+                    <span>
+                        <h4>Results Portal</h4>
+                    </span>
+                    <span>
+                        <p>Access your exam results with a few clicks on our updated results portal.</p>
+                    </span>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12 card3">
+                <div class="card33">
+                    <span>
+                        <i class="fa-solid fa-newspaper"></i>
+                    </span>
+                    <span>
+                        <h4>Press Releases</h4>
+                    </span>
+                    <span>
+                        <p>Stay updated with the latest announcements and updates from BSEK.</p>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- section 2 end -->
+    <!-- section 3 start -->
+     <section class="section3 container">
+        <div>
+            <h1>Model Papers</h1>
+        </div>
+     </section>
+    <!-- section 3 end -->
+    <!-- hero section end -->
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
