--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- navbar start -->
     <section class="navheadsection">
         <div class="navhead">
-            <nav class="navbar navbar-expand-md navheadnav">
+            <nav class="navbar navbar-expand-lg navheadnav">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#"><img src="./BSEKimages/logo3.png" alt="" width="180px"
                             height="30px" /></a>
@@ -34,7 +34,8 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#"><button class="homebtn">Home</button></a>
+                                <a class="nav-link active" aria-current="page" href="#"><button
+                                        class="homebtn">Home</button></a>
                             </li>
                             <li class="nav-item ms-1">
                                 <a class="nav-link" href="#">About</a>
@@ -126,12 +127,229 @@
     </section>
     <!-- section 2 end -->
     <!-- section 3 start -->
-     <section class="section3 container">
+    <section class="section3 container">
         <div>
             <h1>Model Papers</h1>
         </div>
-     </section>
+        <div class="cardsdiv2">
+            <div class="cardsdiv22 row m-0">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="cards21">
+                        <div class="card ccard21">
+                            <img src="./BSEKimages/darkbluemodelpaper.png" class="card-img-top card1img" alt="...">
+                            <div class="card-body card1body">
+                                <h4 class="card-title">NEW MODEL QUESTION PAPERS - CLASS - IX (SCIENCE GROUP)</h4>
+                                <p class="card-text">FOR (S.S.C (ANNUAL) EXAMINATIONS 2023) SSC PART- I ...</p>
+                                <p class="card-text">Click the image or title to view the model paper.</p>
+                                <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="cards22">
+                        <div class="card ccard22">
+                            <img src="./BSEKimages/lightbluemodelpaper.png" class="card-img-top card2img" alt="...">
+                            <div class="card-body card2body">
+                                <h4 class="card-title">NEW MODEL QUESTION PAPERS - CLASS - X (SCIENCE GROUP)</h4>
+                                <p class="card-text">FOR (S.S.C (ANNUAL) EXAMINATIONS 2023) SSC PART- II ...</p>
+                                <p class="card-text">Click the image or title to view the model paper.</p>
+                                <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="cards23">
+                        <div class="card ccard23">
+                            <img src="./BSEKimages/darkbluemodelpaper.png" class="card-img-top card3img" alt="...">
+                            <div class="card-body card3body">
+                                <h4 class="card-title">NEW MODEL QUESTION PAPERS - CLASS - IX (GENERAL GROUP)</h4>
+                                <p class="card-text">FOR (S.S.C (ANNUAL) EXAMINATIONS 2023) SSC PART- I...</p>
+                                <p class="card-text">Click the image or title to view the model paper.</p>
+                                <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="cards24">
+                        <div class="card ccard24">
+                            <img src="./BSEKimages/lightbluemodelpaper.png" class="card-img-top card4img" alt="...">
+                            <div class="card-body card4body">
+                                <h4 class="card-title">NEW MODEL QUESTION PAPERS - CLASS - X (GENERAL GROUP)</h4>
+                                <p class="card-text">FOR (S.S.C (ANNUAL) EXAMINATIONS 2023) SSC PART- II ...</p>
+                                <p class="card-text">Click the image or title to view the model paper.</p>
+                                <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- section 3 end -->
+    <!-- section 4 start -->
+    <section class="section4 container">
+        <div class="section4div">
+            <div class="section4heading">
+                <span>
+                    <h1>Core Members</h1>
+                </span>
+                <span>
+                    <p>The Honourable Leadership of Board of Secondary Education, Karachi.</p>
+                </span>
+            </div>
+            <div class="section4cardsdiv row">
+                <div class="col-lg-6 col-md-6 col-sm-12 sec41">
+                    <div class="sec411">
+                        <div class="card mb-3 sec1111">
+                            <div class="row g-0">
+                                <div class="col-md-4 class1">
+                                    <img src="./BSEKimages/secretary-ub.jpeg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body card11txt">
+                                        <h5 class="card-title">Mr. Muhammad Abbas Baloch</h5>
+                                        <p class="card-text">Secretary - Universities & Boards, Sindh</p>
+                                        <!-- <p class="card-text"><small class="text-body-secondary">Last updated 3 mins
+                                                ago</small></p> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 sec42">
+                    <div class="sec422">
+                        <div class="card mb-3 sec2222">
+                            <div class="row g-0">
+                                <div class="col-md-4 class2">
+                                    <img src="./BSEKimages/chairman2.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body card22txt">
+                                        <h5 class="card-title">Dr. Syed Sharaf Ali Shah</h5>
+                                        <p class="card-text">Chairman, Board of Secondary Education - Karachi</p>
+                                        <!-- <p class="card-text"><small class="text-body-secondary">Last updated 3 mins
+                                                ago</small></p> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 sec43">
+                    <div class="sec433">
+                        <div class="card mb-3 sec3333">
+                            <div class="row g-0">
+                                <div class="col-md-4 class3">
+                                    <img src="./BSEKimages/naveed ahmed.jpeg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body card33txt">
+                                        <h5 class="card-title">Dr. Naveed Ahmed (Ph.D)</h5>
+                                        <p class="card-text">Secretary - Board of Secondary Education, Karachi</p>
+                                        <!-- <p class="card-text"><small class="text-body-secondary">Last updated 3 mins
+                                                ago</small></p> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 sec44">
+                    <div class="sec444">
+                        <div class="card mb-3 sec4444">
+                            <div class="row g-0">
+                                <div class="col-md-4 class4">
+                                    <img src="./BSEKimages/controller-bhutto.jpeg" class="img-fluid rounded-start"
+                                        alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body card44txt">
+                                        <h5 class="card-title">Mr. Zaheeruddin Bhutto</h5>
+                                        <p class="card-text">Controller of Examinations, Board of Secondary Education -
+                                            Karachi</p>
+                                        <!-- <p class="card-text"><small class="text-body-secondary">Last updated 3 mins
+                                                ago</small></p> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 sec45">
+                    <div class="sec455">
+                        <div class="card mb-3 sec5555">
+                            <div class="row g-0">
+                                <div class="col-md-4 class5">
+                                    <img src="./BSEKimages/itimage.jpeg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body card55txt">
+                                        <h5 class="card-title">Director - IT (MS, CC-ISC2)</h5>
+                                        <p class="card-text">Director - Information and Technology, Board of Secondary
+                                            Education Karachi</p>
+                                        <!-- <p class="card-text"><small class="text-body-secondary">Last updated 3 mins
+                                                ago</small></p> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- section 4 end -->
+    <!-- section 5 start -->
+    <section class="section5 container">
+        <div class="section5div">
+            <div>
+                <h1>Check Results' Stats</h1>
+            </div>
+            <div class="row m-0">
+                <div class="col-lg-8 col-md-12 col-sm-12 c1">
+                    <div class="row m-0">
+                        <div class="col-lg-6 col-md-6 col-sm-12 c11">
+                            <div class="card mb-3">
+                                <h1 class="card-title">1,044</h1>
+                                <p class="card-text">Highest Marks</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 c22">
+                            <div class="card mb-3">
+                                <h1 class="card-title">372,654</h1>
+                                <p class="card-text">Current Students</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 c33">
+                            <div class="card mb-3">
+                                <h1 class="card-title">339,497</h1>
+                                <p class="card-text">Science Group</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 c44">
+                            <div class="card mb-3">
+                                <h1 class="card-title">33,157</h1>
+                                <p class="card-text">General Group
+
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-12 col-sm-12">
+                    <div class="youtubelink">
+                        <img class="linkimg" src="./BSEKimages/maxresdefault.jpg" alt="">
+                        <span class="playbtnspan"><img class="playbtn" src="./BSEKimages/play-icon.png" alt=""></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- section 5 end -->
     <!-- hero section end -->
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
